# LimogiAIcryptoX

./: .env.example  .gitignore  README.md  docker-compose.yml  orderbook-health-guide.html  structure.txt
backend/: .env.example  Cargo.toml  Dockerfile  migration.sql  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: live_routes.py  routes.py  websocket.py
backend/app/core/: auth.py  config.py  database.py  kraken_client.py  shadow_executor.py
backend/app/core/live_trading/: __init__.py  circuit_breaker.py  config.py  executor.py  guard.py  manager.py  scanner.py  ui_cache.py
backend/app/models/: live_trading.py  models.py  schemas.py
backend/config/: canada_restrictions.json
backend/src/: auth.rs  config_manager.rs  executor.rs  graph_manager.rs  hft_loop.rs  kraken_pairs.rs  main.rs  order_book.rs  restrictions.rs  scanner.rs  types.rs  ws_v2.rs
backend/src/api/: handlers.rs  mod.rs  websocket.rs
backend/src/db/: mod.rs  models.rs
backend/src/trading/: engine.rs  mod.rs
db/: init.sql
db/migrations/: 001_add_live_trading.sql  002_add_total_trade_amount.sql  002_rename_start_currency.sql  006_live_opportunities.sql  007_add_partial_tracking.sql  008_fee_configuration.sql  apply_all_migrations.sql
deploy/beeks/: DEPLOYMENT_GUIDE.md  README.md  deploy.sh  tune-performance.sh
frontend/: .dockerignore  .env.example  Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: index.html
frontend/src/: App.js  App.tsx  index.css
frontend/src/components/: ConfigBar.css  ConfigBar.js  Header.js  LiveTradeHistoryPanel.js  LiveTradingPanel.js  OpportunitiesPanel.js  PaperTradingPanel.js  ShadowModePanel.js  StatusBar.js  TradeHistoryPanel.js
frontend/src/components/config/: SetupDashboard.tsx  index.ts
frontend/src/components/layout/: Header.tsx
frontend/src/components/monitoring/: index.ts
frontend/src/components/trading/: AccountBalance.tsx  LiveTrades.tsx  PartialTrades.tsx  TradingControls.tsx  TradingDashboard.tsx  index.ts
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/services/: api.js  api.ts
frontend/src/types/: index.ts
frontend/src_backup/: App.js
frontend/src_backup/components/: ConfigBar.css  ConfigBar.js  LiveTradeHistoryPanel.js  LiveTradingPanel.js  OrderBookHealthPanel.js  PriceMatrix.js
frontend/src_backup/hooks/: useWebSocket.js
frontend/src_backup/services/: api.js
frontend/src_backup/styles/: index.css
rust_backend/: Cargo.toml  Dockerfile
rust_backend/src/: auth.rs  config_manager.rs  event_system.rs  executor.rs  graph_manager.rs  kraken_pairs.rs  main.rs  order_book.rs  scanner.rs  trading_config.rs  types.rs  ws_v2.rs
rust_backend/src/api/: handlers.rs  mod.rs  websocket.rs
rust_backend/src/db/: mod.rs  models.rs
rust_backend/src/trading/: engine.rs
rust_engine/: Cargo.toml  pyproject.toml
rust_engine/src/: auth.rs  balance_manager.rs  config_manager.rs  dispatcher.rs  event_system.rs  executor.rs  graph_manager.rs  lib.rs  order_book.rs  scanner.rs  slippage.rs  slot_manager.rs  trading_config.rs  types.rs  websocket.rs  ws_v2.rs
scripts/: upgrade-db.sh
