[package]
name = "rust_backend"
version = "1.0.0"
edition = "2021"
description = "Complete Rust backend for LimogiAICryptoX - Triangular Arbitrage Trading"

[[bin]]
name = "trading_server"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Database - using runtime checking (no compile-time verification)
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "chrono", "uuid"], default-features = false }

# HTTP Client (for Kraken REST API)
reqwest = { version = "0.11", features = ["json", "native-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data Structures
dashmap = "5.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
rayon = "1.8"
rand = "0.8"
dotenvy = "0.15"

# Crypto for Kraken API authentication
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"

# Graph algorithms
petgraph = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
