[package]
name = "trading_engine"
version = "0.1.0"
edition = "2021"
description = "High-performance trading engine for KrakenCryptoX"

[lib]
name = "trading_engine"
crate-type = ["cdylib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "native-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data structures
dashmap = "5.5"  # Concurrent hashmap
parking_lot = "0.12"  # Fast mutex/rwlock
crossbeam-channel = "0.5"  # Fast channels

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
rayon = "1.8"  # Parallel iterators
rand = "0.8"   # Random number generation for execution delay simulation

# Graph algorithms
petgraph = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
